--- a/.classpath
+++ b/.classpath
@@ -4,11 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry exported="true" kind="lib" path="libs/RconEd.jar" sourcepath="W:/RconEd-2.3/src">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/W:/RconEd-2.3/javadoc/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="libs/RConClient-1.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.2.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
