--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -30,6 +30,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.shanked.nicatronTg.minercon.MainActivity" />
         </activity>
+        <activity
+            android:name="me.shanked.nicatronTg.minercon.ServerManageActivity"
+            android:label="@string/title_activity_server_manage"
+            android:parentActivityName="me.shanked.nicatronTg.minercon.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="me.shanked.nicatronTg.minercon.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
