--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="me.shanked.nicatronTg.minercon.MainActivity"
+            android:name="me.shanked.nicatronTg.minercon.activities.ServerList"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,9 +25,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="me.shanked.nicatronTg.minercon.AddServerActivity"
+            android:name="shanked.nicatronTg.minercon.activities.AddServerActivity"
             android:label="@string/title_activity_add_server"
-            android:parentActivityName="me.shanked.nicatronTg.minercon.MainActivity" >
+            android:parentActivityName="me.shanked.nicatronTg.minercon.activities.ServerList" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.shanked.nicatronTg.minercon.MainActivity" />
@@ -34,15 +35,15 @@
         <activity
             android:name="me.shanked.nicatronTg.minercon.ServerManageActivity"
             android:label="@string/title_activity_server_manage"
-            android:parentActivityName="me.shanked.nicatronTg.minercon.MainActivity" >
+            android:parentActivityName="me.shanked.nicatronTg.minercon.activities.ServerList" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.shanked.nicatronTg.minercon.MainActivity" />
         </activity>
         <activity
-            android:name="me.shanked.nicatronTg.minercon.ManageServer"
+            android:name="me.shanked.nicatronTg.minercon.activities.ManageServer"
             android:label="@string/title_activity_manage_server"
-            android:parentActivityName="me.shanked.nicatronTg.minercon.MainActivity" >
+            android:parentActivityName="me.shanked.nicatronTg.minercon.activities.ServerList" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.shanked.nicatronTg.minercon.MainActivity" />
